# rust-auth-micro

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  Rust Auth Micro.postman_collection.json  build.rs  docker-compose.yml
deployments/: Dockerfile  docker-compose.yml
migrations/: 20240525040839_init.down.sql  20240525040839_init.up.sql
proto/: auth.proto
scripts/prometheus/: prometheus.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/grpc/: auth.rs
src/api/interceptors/: auth.rs
src/api/middleware/: auth.rs
src/api/rest/: auth_handler.rs  mod.rs  role_handler.rs  router.rs
src/application/: mod.rs
src/application/dtos/: auth_dto.rs  mod.rs  role_dto.rs  user_dto.rs
src/application/usecases/: auth_usecase.rs  mod.rs  role_usecase.rs  user_usecase.rs
src/domain/models/: mod.rs  role.rs  user.rs  user_role.rs
src/infrastructure/: mod.rs
src/infrastructure/data/: mod.rs
src/infrastructure/data/context/: app_ctx.rs  config.rs  mod.rs  pg_ctx.rs
src/infrastructure/data/errors/: mod.rs  repo_error.rs  usecase_error.rs
src/infrastructure/data/repositories/: mod.rs  redis_repository.rs  repository.rs  role_repository.rs  user_repository.rs  user_role_repository.rs
src/infrastructure/data/tokenizer/: mod.rs  paseto.rs
src/infrastructure/errors/: grpc_error.rs  mod.rs  tokenizer_error.rs  usecase_error.rs
src/infrastructure/utils/: password.rs  response.rs
