[package]
name = "rust-auth-micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
envconfig = "0.10.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "chrono", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
validator = { version = "0.18.1", features = ["derive"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
rusty_paseto = "0.7.1"
time = "0.3.36"
axum-extra = { version = "0.9.3", features = ["cookie"]}
tower = "0.4.13"
tonic = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
